--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,26 +7,22 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <EditText
-    android:id="@+id/email_edittext"
-    android:layout_width="200dp"
-    android:layout_height="wrap_content" />
-
-    <EditText
-    android:id="@+id/password_edittext"
-    android:layout_width="200dp"
-    android:layout_height="wrap_content" />
-
-    <Button
-    android:id="@+id/signup_button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Email signup" />
-
-    <Button
-        android:id="@+id/google_login_button"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="GoogleLogin" />
+        android:text="로그인성공!!"
+        android:textSize="36sp" />
 
+    <Button
+        android:id="@+id/logout_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="로그아웃" />
+
+    <Button
+        android:id="@+id/profile_edit_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="프로필 편집" />
 </LinearLayout>
