--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,16 @@
         android:layout_height="wrap_content"
         android:text="로그아웃" />
 
-    <Button
-        android:id="@+id/profile_edit_button"
-        android:layout_width="match_parent"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/myProfile_imageview_mainActivity"
+        android:layout_width="237dp"
         android:layout_height="wrap_content"
-        android:text="프로필 편집" />
+        android:layout_gravity="right"
+        android:layout_marginRight="15dp"
+        android:elevation="10dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/users"
+        android:transitionName="profile_transition"
+        android:visibility="visible" />
+
 </LinearLayout>
